[package]
name = "gltfpack-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for gltfpack - optimize and compress glTF/GLB files"
repository = "https://github.com/diodeinc/gltfpack-sys"
homepage = "https://github.com/diodeinc/gltfpack-sys"
documentation = "https://docs.rs/gltfpack-sys"
readme = "README.md"
keywords = ["gltf", "glb", "3d", "mesh", "compression"]
categories = ["compression", "graphics", "rendering"]
exclude = [
    "*.glb",
    "*.gltf",
    ".git",
    ".github",
]

[dependencies]

[features]
default = []
cli = ["dep:clap"]

[[bin]]
name = "gltfpack-rs"
path = "src/main.rs"
required-features = ["cli"]

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
# Don't build vendor submodule on docs.rs
default-target = "x86_64-unknown-linux-gnu"
